// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Clipboard Snapshot Tests > Displays Clipboard 1`] = `
<div
>

  <div
    data-scope="clipboard"
    data-part="root"
    id="clip::r0:"
    class="_clipboard_HASH_2"
    data-ods="clipboard"
    role="group"
    data-testid="clipboard"
  >

    <div
      class="_clipboard__input_HASH_2 _input_HASH_2"
      data-readonly="true"
    >

      <input
        aria-busy="false"
        class="_input__field_HASH_41"
        data-ods="clipboard-control"
        id=":r1:"
        type="text"
        readonly=""
        data-scope="clipboard"
        data-part="control"
        value="Test Message"
      >
    </div
    >

      <button
        class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--xs_HASH_25 _button_HASH_2 _clipboard-trigger__copy_HASH_2 _tooltip-trigger_HASH_2"
        data-ods="clipboard-trigger"
        data-scope="clipboard"
        data-part="trigger"
        id="tooltip::r2::trigger"
        dir="ltr"
        data-state="closed"
        role="button"
        tabindex="0"
        aria-label="Copier dans le presse-papier"
        type="button"
      >

        <span
          class="_icon--file-copy_HASH_247 _icon_HASH_2"
          data-ods="icon"
          role="presentation"
        >
        </span
        >
        </button
        >
        </div
        >
        </div
        >
`;

exports[`Clipboard Snapshot Tests > Displays disabled Clipboard 1`] = `
<div
>

  <div
    data-scope="clipboard"
    data-part="root"
    id="clip::r3:"
    class="_clipboard--disabled_HASH_18 _clipboard_HASH_2"
    data-ods="clipboard"
    role="group"
    data-testid="clipboard"
  >

    <div
      class="_clipboard__input_HASH_2 _input_HASH_2"
      data-disabled="true"
      data-readonly="true"
    >

      <input
        aria-busy="false"
        class="_input__field_HASH_41"
        data-ods="clipboard-control"
        id=":r4:"
        type="text"
        disabled=""
        readonly=""
        data-scope="clipboard"
        data-part="control"
        value="Test Message"
      >
    </div
    >

      <button
        class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--xs_HASH_25 _button_HASH_2 _clipboard-trigger__copy_HASH_2 _tooltip-trigger_HASH_2"
        data-ods="clipboard-trigger"
        disabled=""
        data-scope="clipboard"
        data-part="trigger"
        id="tooltip::r5::trigger"
        dir="ltr"
        data-state="closed"
        role="button"
        tabindex="0"
        aria-label="Copier dans le presse-papier"
        type="button"
      >

        <span
          class="_icon--file-copy_HASH_247 _icon_HASH_2"
          data-ods="icon"
          role="presentation"
        >
        </span
        >
        </button
        >
        </div
        >
        </div
        >
`;

exports[`Clipboard Snapshot Tests > Displays loading Clipboard 1`] = `
<div
>

  <div
    data-scope="clipboard"
    data-part="root"
    id="clip::r6:"
    class="_clipboard_HASH_2"
    data-ods="clipboard"
    role="group"
    data-testid="clipboard"
  >

    <div
      class="_clipboard__input_HASH_2 _input--with-actions_HASH_38 _input_HASH_2"
      data-readonly="true"
      role="group"
    >

      <input
        aria-busy="true"
        class="_input__field_HASH_41"
        data-ods="clipboard-control"
        id=":r7:"
        type="text"
        readonly=""
        data-scope="clipboard"
        data-part="control"
        value="Test Message"
      >

      <div
        class="_input-actions_HASH_2"
      >

        <span
          class="_input-actions__loading_HASH_7 _spinner--primary_HASH_29 _spinner--xs_HASH_14 _spinner_HASH_10"
          data-ods="spinner"
          role="none"
        >

          <svg
            aria-hidden="true"
            class="_spinner__svg_HASH_32"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >

            <rect
              fill="none"
              height="24"
              width="24"
            >
            </rect
            >

              <g
                transform="translate(-237.694 -93.932)"
              >

                <path
                  d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                  transform="translate(5486 4225)"
                >
                </path
                >

                  <circle
                    cx="1"
                    cy="1"
                    r="1"
                    transform="translate(248.694 114.932)"
                  >
                  </circle
                  >

                    <circle
                      cx="1"
                      cy="1"
                      r="1"
                      transform="translate(238.694 104.932)"
                    >
                    </circle
                    >
                    </g
                    >
                    </svg
                    >
                    </span
                    >
                    </div
                    >
                    </div
                    >

                      <button
                        class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--xs_HASH_25 _button_HASH_2 _clipboard-trigger__copy_HASH_2 _tooltip-trigger_HASH_2"
                        data-ods="clipboard-trigger"
                        data-scope="clipboard"
                        data-part="trigger"
                        id="tooltip::r8::trigger"
                        dir="ltr"
                        data-state="closed"
                        role="button"
                        tabindex="0"
                        aria-label="Copier dans le presse-papier"
                        type="button"
                      >

                        <span
                          class="_icon--file-copy_HASH_247 _icon_HASH_2"
                          data-ods="icon"
                          role="presentation"
                        >
                        </span
                        >
                        </button
                        >
                        </div
                        >
                        </div
                        >
`;

exports[`Clipboard Snapshot Tests > Displays masked Clipboard 1`] = `
<div
>

  <div
    data-scope="clipboard"
    data-part="root"
    id="clip::r9:"
    class="_clipboard_HASH_2"
    data-ods="clipboard"
    role="group"
    data-testid="clipboard"
  >

    <div
      class="_clipboard__input_HASH_2 _input--with-actions_HASH_38 _input_HASH_2"
      data-readonly="true"
      role="group"
    >

      <input
        aria-busy="false"
        class="_input__field_HASH_41"
        data-ods="clipboard-control"
        id=":ra:"
        type="password"
        readonly=""
        data-scope="clipboard"
        data-part="control"
        value="Test Message"
      >

      <div
        class="_input-actions_HASH_2"
      >

        <button
          class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--xs_HASH_25 _button_HASH_2"
          data-ods="button"
          aria-controls=":ra:"
          aria-label="Show"
          type="button"
        >

          <span
            class="_icon--eye-off_HASH_238 _icon_HASH_2"
            data-ods="icon"
            role="presentation"
          >
          </span
          >
          </button
          >
          </div
          >
          </div
          >

            <button
              class="_button--ghost_HASH_151 _button--primary_HASH_100 _button--xs_HASH_25 _button_HASH_2 _clipboard-trigger__copy_HASH_2 _tooltip-trigger_HASH_2"
              data-ods="clipboard-trigger"
              data-scope="clipboard"
              data-part="trigger"
              id="tooltip::rb::trigger"
              dir="ltr"
              data-state="closed"
              role="button"
              tabindex="0"
              aria-label="Copier dans le presse-papier"
              type="button"
            >

              <span
                class="_icon--file-copy_HASH_247 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >
              </div
              >
              </div
              >
`;
